posture-perfect/src/App.css
.abs {
  position: absolute;
}

a {
  color: white;
  text-decoration: none;
}

body {
  bottom: 0;
  font-family: "Titillium Web", sans-serif;
  color: white;
  left: 0;
  margin: 0;
  position: absolute;
  right: 0;
  top: 0;
  transform-origin: 0px 0px;
  overflow: hidden;
}

.container {
  position: absolute;
  background-color: #596e73;
  width: 100%;
  max-height: 100%;
}

.input_video {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.input_video .selfie {
  transform: scale(-1, 1);
}

.input_image {
  position: absolute;
}

.canvas-container {
  display: flex;
  height: 100%;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.output_canvas {
  max-width: 100%;
  display: block;
  position: relative;
  left: 0;
  top: 0;
}

.control-panel {
  position: absolute;
  left: 10px;
  top: 10px;
}

.card-top {
  position: absolute;
  right: 45px;
  top: 45px;
  width: 300px;
  height: 300px;
  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6274509804);
  border-radius: 28px;
  color: #fff;
  z-index: 100;
  background-color: #222;
}

.card-title {
  display: flex;
  justify-content: center;
  width: 100%; /* fills the width of the container */
}

.card-bottom {
  position: absolute;
  right: 3%;
  bottom: 3%;
  width: 20%;
  min-width: 250px; /* minimum width can be adjusted based on requirements */
  height: 50%;
  min-height: 400px; /* minimum height can be adjusted based on requirements */
  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6274509804);
  border-radius: 8%;
  color: #fff;
  z-index: 100;
  background-color: #222;
  display: flex;
  flex-direction: column;
  justify-content: flex-start; /* aligns items to the top */
  padding: 2%;
}

/* Responsive design for smaller screens - todo*/
/* @media (max-width: 600px) {
  .card-bottom {
    width: 90%;
    height: 80%;
    right: 5%;
    bottom: 10%;
  }
} */

.toast-custom-error {
  background-color: #d32f50 !important; /* Set your desired color */
}

.toast-custom-info {
  background-color: #0075ff !important; /* Set your desired color */
}

